[package]
name = "faccess"
version = "0.1.0"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"
description = "Simple file accessibility checks"
repository = "https://github.com/Freaky/faccess"
license = "MIT"
keywords = ["file", "access"]
categories = ["api-bindings", "filesystem"]
readme = "README.md"

[dependencies]
libc = "0.2.67"
